@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.95-1
 VersionNote: Released 0.95-0 on 2021-04-02 to CRAN
-Date: 2022-05-10
+Date: 2022-05-18
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
